--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
     <div class="container footer__container">
       <div class="footer__contacts">
         <p class="footer__text footer__text--designer">
-          Design: Anastasia Ilina
+          Design: <a class="footer__link--designer" href="#">Anastasia Ilina</a>
         </p>
 
         <p class="footer__text footer__text--coder">
-          Сoder: Palamarenko Eugenia
+          Сoder: <a class="footer__link--coder" href="#">Palamarenko Eugenia</a>
         </p>
 
         <p class="footer__text footer__text--copyright">
